--- a/Desktop/Portfolio/Home.css
+++ b/Desktop/Portfolio/Home.css
@@ -3,6 +3,44 @@
     padding: 0;
 }
 
+.burger {
+    width: 30px;
+    height: 30px;
+    display: none;
+
+    cursor: pointer;
+}
+
+#close-svg {
+    width: 30px;
+    height: 30px;
+    display: none;
+
+    cursor: pointer;
+}
+
+@media  (max-width: 868px) {
+    .burger img { 
+        display: block;   
+}
+}
+
+.Categories {
+    display: none;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+nav {
+    height: 100%;
+    position: static;
+    padding: 0;
+    width: 100%;
+    padding: 30px 0;
+}
+
+
 :root {
     --main-color: #071E2E;
     --secondary-color: #03ADEA;
@@ -20,6 +58,7 @@ header {
     justify-content: space-between;
     padding: 20px 0;
 }
+
 
 header ul {
     list-style: none;
